--- a/pom.xml
+++ b/pom.xml
@@ -3,5 +3,18 @@
 	<groupId>bg.swu.example.iot</groupId>
 	<artifactId>paho-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.0</version>
+				<configuration>
+					<release>8</release>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
 
