--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
 	<artifactId>paho-client</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.mqttv5.client</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
